<resources>
    <string name="app_name">GimmeShelterApp</string>

    <!-- Strings related to login and registration-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registration_screen">RegistrationScreen</string>
    <string name="cancel_button">Cancel</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="gender_label">Gender</string>
    <string name="bdate_label">Birth Date</string>
    <string name="prompt_bdate">Select Date</string>
    <string name="prompt_admin">Admin</string>
    <string name="error_invalid_username">Error: crschriever invalid.</string>
    <string name="email_in_use">Error: email already in use</string>
    <string name="error_email_password_not_found">Email, password combination not found</string>
    <string name="shelters_didnt_load">Shelters failed to load</string>
    <string name="shelter_list_button">View Shelters</string>
    <string name="logout_button">Logout</string>
    <string name="shelter_map_button">Nearby Shelters</string>
    <string name="default_shelter_name">No name</string>
    <string name="default_shelter_constraint">No constraints</string>
    <string name="default_shelter_address">No address given</string>
    <string name="shelter_item_restiction_label">Restrictions:</string>
    <string name="shelter_item_address_label">Address:</string>
    <string name="shelter_detail_capacity_label">Capacity:</string>
    <string name="shelter_detail_phone_number_label">Phone:</string>
    <string name="shelter_detail_restrictions_label">Restrictions:</string>
    <string name="shelter_detail_special_notes_label">Notes:</string>
    <string name="search_add_restriction">Add restriction</string>
    <string name="search_specs_label">Search Criteria:</string>
    <string name="restriction_already_added">Restriction already added.</string>
    <string name="shelter_search_button">Search Shelters</string>
    <string name="search_title">Search</string>
    <string name="select_gender">Gender:</string>
    <string name="restictions_label">Add restrictions:</string>
    <string name="search_search">Search</string>
    <string name="removing_restrictions">Removing restrictions</string>
    <string name="prompt_shelter_name">Shelter Name</string>
    <string name="prompt_bed">Reserve beds</string>
    <string name="prompt_remove_bed">Release beds</string>
    <string name="num_beds">Number beds reserved:</string>
    <string name="search_map">Map</string>
</resources>
