<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:id="@+id/shelter_list_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_shelter_name" />

    <TextView
        android:id="@+id/shelter_list_item_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_shelter_constraint" />

    <TextView
        android:id="@+id/shelter_list_item_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_shelter_address" />

</LinearLayout>