<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hkamath.gimmeshelterapp.ShelterDetails"
    android:padding="16dp">

    <!-- Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="parent"
        android:id="@+id/name_linear"
        android:layout_marginVertical="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shelter_name_text"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- capacity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/name_linear"
        android:id="@id/capacity_linear"
        android:layout_marginVertical="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/shelter_detail_capacity_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shelter_capacity_text"/>
    </LinearLayout>

    <!-- phone number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/capacity_linear"
        android:id="@+id/phone_linear"
        android:layout_marginVertical="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/shelter_detail_phone_number_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shelter_phone_number_text"/>
    </LinearLayout>

    <!-- restrictions -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/phone_linear"
        android:id="@+id/restrictions_linear"
        android:layout_marginVertical="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/shelter_detail_restrictions_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shelter_restrictions_text"/>
    </LinearLayout>

    <!-- special notes -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/restrictions_linear"
        android:id="@+id/notes_linear"
        android:layout_marginVertical="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/shelter_detail_special_notes_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shelter_special_notes_text"/>
    </LinearLayout>

    <!-- address -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/notes_linear"
        android:layout_marginVertical="14dp"
        android:id="@+id/shelter_address_linear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shelter_address_text"/>
    </LinearLayout>

    <!-- Claim beds -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="14dp"
        app:layout_constraintTop_toBottomOf="@+id/shelter_address_linear"
        android:gravity="center_vertical"
        android:id="@+id/shelter_claim_linear">

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shelter_bed_number"></NumberPicker>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_bed"
            android:id="@+id/shelter_reserve_bed"/>

    </LinearLayout>

    <!-- Remove beds -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="14dp"
        app:layout_constraintTop_toBottomOf="@+id/shelter_address_linear"
        android:id="@+id/shelter_remove_linear">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shelter_num_beds"/>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/shelter_remove_bed"
           android:text="@string/prompt_remove_bed"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
